--- a/CLARIDO_ALUMNI_index.html
+++ b/CLARIDO_ALUMNI_index.html
@@ -8,10 +8,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="CLARIDO_ALUMNI_style.css">
 	</head>
-
+	<!-- <div id="wrapper"> -->
 	<body>
-
-		<header>
+		<header class="header-control">
 			<div class="top-nav-bar">
 				<p class="myschool-title">MySchool</p>
 				<div class="box-login">
@@ -28,10 +27,137 @@
 
 		<div class="account-container">
 			<div class="profile-id">
-				<br><br><br><br><br>NO PROFILE
 			</div>
 			<p class="name">Jane</p>
+			<p class="course">BSIT</p>
+			<p class="yearLevel">1st Year</p>
 			<hr class="myHr">
+
+			<div class="follower-container">
+				<p class="followers-count">102</p>
+				<p class="follower-text">Followers</p>
+			</div>
+
+			<div class="following-container">
+				<p class="following-count">101</p>
+				<p class="following-text">Following</p>
+			</div>
 		</div>
+
+		<div class="tips-container">
+			<div class="title">
+				<p class="title-text">TIPS</p>
+				<p class="description-text">Ask advice from the people who are in the same course with you. You can also share advices the you've experienced.</p>
+			</div>
+
+			<div class="user-account">
+				<div class="profile-picture-tips-container">
+					<img src="images/boy-tips.jpg" alt="profile picture" class="boy-tips-img">
+				</div>
+				<div class="profile-text">
+					<p class="container-profile-name">Mario</p>
+					<p class="container-profile-course">BSIT Alumni</p>
+					<p class="container-profile-description">Qui ipsum et maiores veniam. Earum quam qui natusfugit et. Occaecati ex et et quae excepturi nemo cupiditate perferendis. Quibusdam rerum saepe quo natus esse incidunt delectus</p>
+					<button class="button-follow-tips">FOLLOW</button>
+				</div>
+			</div>
+
+			<div class="user-account2">
+				<div class="profile-picture-tips-container">
+					<img src="images/girl-tips.jpg" alt="profile picture" class="boy-tips-img">
+				</div>
+				<div class="profile-text">
+					<p class="container-profile-name">Neneng B</p>
+					<p class="container-profile-course">BSPh 2nd Year</p>
+					<p class="container-profile-description">Qui ipsum et maiores veniam. Earum quam qui natusfugit et. Occaecati ex et et quae excepturi nemo cupiditate perferendis. Quibusdam rerum saepe quo natus esse incidunt delectus</p>
+					<button class="button-follow-tips">FOLLOW</button>
+				</div>
+			</div>
+
+			<div class="show-more-option">
+				<p>Show more...</p>
+			</div>
+		</div>
+
+		<div class="inpiration-container">
+			<div class="title-inspiration">
+				<p class="title-text-inspiration">GET<br> INSPIRED</p>
+				<p class="description-text-inspiration">Listen to first-hand stories from different professionals.</p>
+				<button class="inspirations-peek">PEEK INSIDE</button>
+			</div>
+
+			<div class="detail-on-image">
+				<p class="name-user">
+					Donna					
+				</p>
+				<p class="course-year-user">
+					BSIT Alumni
+				</p>
+				<p class="user-qoute">
+					You have a lot to expect in Information Technology
+				</p>
+			</div>
+		</div>
+
+		<div class="learn-container">
+			<div class="title-learn">
+				<p class="title-text-inspiration">LEARN</p>
+				<p class="description-text-inspiration">You can join tutorials from other students that you follow</p>
+				<button class="learn-share">SHARE KNOWLEDGE</button>
+				<button class="learn-learn">LEARN KNOWLEDGE</button>
+			</div>
+
+			<div class="detail-on-image-learn">
+				<p class="name-user">
+					Peter				
+				</p>
+				<p class="course-year-user">
+					BSIT 2nd Year
+				</p>
+				<p class="user-qoute">
+					You have a lot to expect in Information Technology
+				</p>
+			</div>
+		</div>
+
+		<div class="schedule-container">
+			<p class="schedule-text">SCHEDULE</p>
+			<p class="date-today">Dec. 15, 2019</p>
+
+			<div class="schedule-format">
+				<div class="schedule-profile"></div>
+				<div class="schedule-text-content">
+					<p class="schedule-title">Programming Tutorial</p>
+					<p class="schedule-time">7pm at the Lobby | Main Campus</p>
+				</div>
+			</div>
+
+			<div class="schedule-format">
+				<div class="schedule-profile"></div>
+				<div class="schedule-text-content">
+					<p class="schedule-title">Team Building</p>
+					<p class="schedule-time">5pm at the Lobby | Main Campus</p>
+				</div>
+			</div>
+
+			<div class="schedule-format">
+				<div class="schedule-profile"></div>
+				<div class="schedule-text-content">
+					<p class="schedule-title">Math Tutorial</p>
+					<p class="schedule-time">2pm at the Lobby | Main Campus</p>
+				</div>
+			</div>
+
+			<div class="schedule-format">
+				<div class="schedule-profile"></div>
+				<div class="schedule-text-content">
+					<p class="schedule-title">Project Management</p>
+					<p class="schedule-time">4am at the Lobby | Main Campus</p>
+				</div>
+			</div>
+		</div>
+
+
 	</body>
+<!-- </div> -->
 </html>
